APPLINK-9274: Heart beat from policy

--- a/test/components/application_manager/CMakeLists.txt
+++ b/test/components/application_manager/CMakeLists.txt
@@ -28,6 +28,13 @@ set(LIBRARIES
     ProtocolLibrary
 )
 
+if(ENABLE_LOG)
+  list(APPEND LIBRARIES log4cxx -L${LOG4CXX_LIBS_DIRECTORY})
+  list(APPEND LIBRARIES apr-1 -L${APR_LIBS_DIRECTORY})
+  list(APPEND LIBRARIES aprutil-1 -L${APR_UTIL_LIBS_DIRECTORY})
+  list(APPEND LIBRARIES expat -L${EXPAT_LIBS_DIRECTORY})
+endif()
+
 #create_test("test_APIVersionConverterV1Test" "./api_converter_v1_test.cpp" "${LIBRARIES}")
 create_test("test_formatters_commands" "./formatters_commands.cc" "${LIBRARIES}")
 #create_test("test_schema_factory_test" "./schema_factory_test.cc" "${LIBRARIES}")
