*.orig files excluded from pasa-tarball

--- a/customer-specific/pasa.conf
+++ b/customer-specific/pasa.conf
@@ -38,7 +38,8 @@ exclude_bin=""
 
 exclude_filenames="CMakeLists.txt \
                    .git \
-                   .gitignore"
+                   .gitignore \
+                   *.orig"
 
 export_dir=/tmp/PASA
 
