Panasonic binary gets the same commit hash as Ford's one

--- a/customer-specific/pasa.conf
+++ b/customer-specific/pasa.conf
@@ -51,7 +51,7 @@ function snapshot_tag() {
 }
 
 function last_commit {
-      git --git-dir=$srcdir'/.git'  log origin/develop| head -n 1|cut -f 2 -d ' '
+    git --git-dir=$srcdir'/.git' rev-parse HEAD
 }
 
 function chech_valid() {
