--- a/src/components/utils/CMakeLists.txt
+++ b/src/components/utils/CMakeLists.txt
@@ -46,7 +46,7 @@ endif()
 add_library("Utils" ${SOURCES})
 
 if(ENABLE_LOG)
-  target_link_libraries("Utils" log4cxx -L${LOG4CXX_LIBS_DIRECTORY} apr-1 -L${APR_LIBS_DIRECTORY})
+  ADD_DEPENDENCIES(Utils 3rd_party_logger install-3rd_party_logger)
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
