--- a/test/log4cxx.properties
+++ b/test/log4cxx.properties
@@ -8,7 +8,7 @@ log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.ImmediateFlush=true
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%-5p [%d{dd MMM yyyy HH:mm:ss,SSS}][%c] %m%n
-log4j.appender.Console.Threshold=ALL
+log4j.appender.Console.Threshold=DEBUG
 
 # Log for all SmartDeviceLinkCore messages
 log4j.appender.SmartDeviceLinkCoreLogFile=org.apache.log4j.FileAppender
@@ -56,7 +56,7 @@ log4j.appender.ProtocolFordHandlingLogFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ProtocolFordHandlingLogFile.layout.ConversionPattern=%-5p [%d{dd MMM yyyy HH:mm:ss,SSS}][%c] %M: %m%n
 
 # All SmartDeviceLinkCore logs
-log4j.rootLogger=ALL, SmartDeviceLinkCoreLogFile, SmartDeviceLinkCoreSocketHub
+log4j.rootLogger=ALL, Console, SmartDeviceLinkCoreLogFile, SmartDeviceLinkCoreSocketHub
 
 # TransportManager logs
 log4j.logger.TransportManager=ALL, TransportManagerLogFile
