--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,8 @@ include_directories(
 # --- components tests
 add_subdirectory(./components)
 add_subdirectory(./thirdPartyLibs)
-add_subdirectory(${CMAKE_SOURCE_DIR}/src/components/policy/test/policy ./policy)
+add_subdirectory(${CMAKE_SOURCE_DIR}/src/components/policy/test
+    ${CMAKE_BINARY_DIR}/src/components/policy/test)
 add_subdirectory(./tools)
 
 set (INCLUDE_DIR
