APPLINK-9509: Unit-Test refactoring Slight change in catalogue structure.

--- a/src/components/media_manager/CMakeLists.txt
+++ b/src/components/media_manager/CMakeLists.txt
@@ -85,8 +85,8 @@ if(BUILD_TESTS)
     ../../3rd_party-static/gmock-1.7.0/gtest/include)
   
   set(testSources
-    ./src/main.cc
-    ./src/media_adapter_impl_test.cc)
+    ./test/main.cc
+    ./test/media_adapter_impl_test.cc)
 
   set(testLibraries
     gmock
