--- a/test/components/formatters/CMakeLists.txt
+++ b/test/components/formatters/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories (
   ../../../src/components/utils/include
   ${JSONCPP_INCLUDE_DIRECTORY}
   ${CMAKE_BINARY_DIR}
+  ${LOG4CXX_INCLUDE_DIRECTORY}
 )
 
 set (LIBRARIES
