--- a/src/components/policy/test/policy/usage_statistics/CMakeLists.txt
+++ b/src/components/policy/test/policy/usage_statistics/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(
+  ${LOG4CXX_INCLUDE_DIRECTORY}
   include
   ${CMAKE_SOURCE_DIR}/src/components/policy/usage_statistics/include
   ${GMOCK_INCLUDE_DIRECTORY}
