Not a subject for review
	Reason: Get Last changes from develop for build on genkins server

--- a/test/components/connection_handler/CMakeLists.txt
+++ b/test/components/connection_handler/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories (
+  ${LOG4CXX_INCLUDE_DIRECTORY}
   ${GMOCK_INCLUDE_DIRECTORY}
   ./include
   ${CMAKE_SOURCE_DIR}/src/components/connection_handler/include
@@ -23,7 +24,7 @@ set (LIBRARIES
 set (SOURCES
   ./src/connection_handler_impl_test.cc
   ./src/connection_test.cc
-#  ./src/heart_beat_monitor_test.cc
+  ./src/heart_beat_monitor_test.cc
 )
 
 create_test("test_ConnectionHandler" "${SOURCES}" "${LIBRARIES}")
