Not a subject for review
	Reason: remove redudant docs and add some files to GENIVI

--- a/customer-specific/pasa.conf
+++ b/customer-specific/pasa.conf
@@ -1,4 +1,8 @@
-include_src="src \
+include_src="
+             build_and_run_steps.txt
+             setup_env.sh
+             doc
+	     src \
              tools/InterfaceGenerator \
              src/3rd_party-static/encryption \
              src/3rd_party-static/jsoncpp \
