--- a/src/components/policy/CMakeLists.txt
+++ b/src/components/policy/CMakeLists.txt
@@ -30,5 +30,9 @@
 
 # --- Policy
 add_subdirectory(./src/policy)
-
+#======================= Unit-Test section =======================
+if(BUILD_TESTS)
+  add_subdirectory(test)
+endif()
+#=================================================================
 
