--- a/src/appMain/CMakeLists.txt
+++ b/src/appMain/CMakeLists.txt
@@ -157,20 +157,62 @@ add_executable(${PROJECT} ${SOURCES})
 target_link_libraries(${PROJECT} ${LIBRARIES})
 
 
-#======================= Unit-Test section ======================= 
+#======================= Unit-Test section =======================
 if(BUILD_TESTS)
+
+get_property(the_include_dirs DIRECTORY "" PROPERTY INCLUDE_DIRECTORIES)
+message("\nMain OLD = " ${the_include_dirs})
+     set(class_to_mock ${CMAKE_SOURCE_DIR}/src/components/application_manager/include)
+     list(FIND the_include_dirs ${class_to_mock} find_idx)
+     if(find_idx GREATER -1)
+       message("\nMain REPLACED " ${class_to_mock})
+       LIST_REPLACE(the_include_dirs ${find_idx} ${CMAKE_SOURCE_DIR}/src/components/application_manager/test/include)
+     endif()
+message("\nMain NEW = " ${the_include_dirs})
+set_property(DIRECTORY "" PROPERTY INCLUDE_DIRECTORIES ${the_include_dirs})
+
   include_directories (
-    ../3rd_party-static/gmock-1.7.0/include
-    ../3rd_party-static/gmock-1.7.0/gtest/include)
-  
+  ../3rd_party-static/gmock-1.7.0/include
+  ../3rd_party-static/gmock-1.7.0/gtest/include
+  ${CMAKE_SOURCE_DIR}/src/components/application_manager/test/include
+  ${CMAKE_SOURCE_DIR}/src/components/policy/src/policy/usage_statistics/include
+  ../components/protocol_handler/include/
+  ${JSONCPP_INCLUDE_DIRECTORY}
+  ../components/application_manager/include
+  ../components/formatters/include
+  ../components/transport_manager/include
+  ${SecurityManagerIncludeDir}
+  ../components/config_profile/include
+  ../components/utils/include/
+  ../components/connection_handler/include/
+  ../components/hmi_message_handler/include
+  ../components/request_watchdog/include
+  ../components/smart_objects/include/
+  ../components/media_manager/include/
+  ${CMAKE_SOURCE_DIR}/src/components/time_tester/include
+  ${CMAKE_SOURCE_DIR}/src/components/policy/src/policy/include/
+  ../components/resumption/include/
+  ${MESSAGE_BROKER_INCLUDE_DIRECTORY}
+  ${ENCRYPTION_INCLUDE_DIRECTORY}
+  ${CMAKE_SOURCE_DIR}/src/components/
+  ${CMAKE_BINARY_DIR}/src/components/
+  ${CMAKE_SOURCE_DIR}/src/components/dbus/include/
+  ${CMAKE_BINARY_DIR}/src/components/policy/src/policy
+  ${CMAKE_BINARY_DIR}/src/components/policy/usage/policy
+  ${CMAKE_SOURCE_DIR}
+  ${default_media_inc}
+  ${LOG4CXX_INCLUDE_DIRECTORY}
+)
+
   set(testSources
     ./main_test.cc
     ../components/utils/test/file_system_test.cc
     ../components/utils/test/date_time_test.cc
     ../components/media_manager/test/media_adapter_impl_test.cc
-    ../components/application_manager/test/command_impl_test.cc
+    ../components/application_manager/test/src/commands/mobile/command_impl_test.cc
+    ../components/application_manager/test/src/application_manager_impl.cc
 )
-    
+
   set(testLibraries
     gmock
     gtest
