APPLINK-9800: repair unit test of policy for QNX

--- a/src/components/policy/test/test-qdb.ini
+++ b/src/components/policy/test/test-qdb.ini
@@ -1,7 +1,8 @@
 # This config file for QDB
 # Format see in manual of QNX
 [policy]
-Filename=policy.sqlite
+Filename=policy.db
+Schema File=policy.sql
 
 [test-database]
 Filename=test-database.sqlite
