--- a/src/appMain/smartDeviceLink.ini
+++ b/src/appMain/smartDeviceLink.ini
@@ -54,6 +54,8 @@ ReadDIDRequest = 5, 1
 GetVehicleDataRequest = 5, 1
 
 [MEDIA MANAGER]
+; where 3 is a number of retries and 1 is a timeout in seconds for request frequency 
+StartStreamRetry = 3, 1
 EnableRedecoding = false
 VideoStreamConsumer = socket
 AudioStreamConsumer = socket
