--- a/customer-specific/pasa.conf
+++ b/customer-specific/pasa.conf
@@ -13,6 +13,7 @@ include_bin="src/components/interfaces/*.h \
 
 exclude_src="src/appMain/log4cxx.properties \
              src/appMain/main.cc \
+	     src/appMain/main_test.cc \
              src/appMain/smartDeviceLink.ini \
              src/appMain/start-qml.sh \
              src/components/dbus \
